Everything before introducing redux

--- a/src/BookInfoRow.css
+++ b/src/BookInfoRow.css
@@ -7,6 +7,11 @@
 .isbn{
     font-size: medium;
 }
+.desc{
+    padding-top: 20px;
+    font-size: small;
+    word-wrap: normal;
+}
 .options{
     font-size: medium;
     text-align:right;
