--- a/src/components/BookInfoRow.css
+++ b/src/components/BookInfoRow.css
@@ -14,7 +14,7 @@
 }
 .options{
     font-size: medium;
-    text-align:right;
+    text-align:left;
 }
 .options :hover{
     color: grey;
@@ -22,6 +22,7 @@
 
 .clickToEdit .title:hover, .clickToEdit .author:hover{
     color: grey;
+    cursor: pointer
 }
 
 .editForm label{
